// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button Renders 1`] = `
[
  <button
    class="sc-bdnyFh JUQsA"
    variant="secondary"
  >
    Text
  </button>,
]
`;

exports[`Button Renders primary 1`] = `
[
  <button
    class="sc-bdnyFh fBycnq"
    variant="primary"
  >
    Text
  </button>,
]
`;

exports[`Button Renders secondary 1`] = `
[
  <button
    class="sc-bdnyFh JUQsA"
    variant="secondary"
  >
    Text
  </button>,
]
`;
